python/src/converter/manifests - Copy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
